infra/k8s/service-query.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-api-service
spec:
  selector:
    app: query-api
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
