infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: askbase-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: askbase.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: query-api-service
            port:
              number: 8000
